manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addtask
spec: 
  replicas: 2
  selector:
    matchLabels:
      apps: addtask
  template:
    metadata:
      labels:
        apps: addtask
    spec:
      containers:
        - name: addask
          image: appsacrrrrrr.azurecr.io/appsaddtask:v1
          ports:
            - containerPort: 8000
